# cli-quest

./: .gitignore  Dockerfile  docker-compose.yml  package-lock.json  package.json  pyproject.toml
app/: main.py
app/api/: auth.py  challenges.py  leaderboard.py  users.py  websocket.py
app/core/: challenge_engine.py  hints.py  sandbox.py  scoring.py
app/database/: connection.py
app/utils/: logger.py
frontend/: Dockerfile  eslint.config.js  package-lock.json  package.json
frontend/project.inlang/: project_id
frontend/src/lib/components/: Terminal.svelte
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/src/routes/challenges/: +page.svelte
frontend/src/routes/challenges/[id]/: +page.svelte
