[tool.poetry]
name = "cli-quest"
version = "0.1.0"
description = ""
authors = ["IndigonaBlue <rdadeveyra@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["standard"], version = "^0.115.13"}
uvicorn = "^0.32.1"
websockets = "^14.1"
docker = "^7.1.0"
asyncpg = "^0.30.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
